[build-system]
requires = ["poetry-core>=1.5.2"]
build-backend = "poetry.core.masonry.api"

[tool]
  [tool.commitizen]
  version_provider = "poetry"
  version_files = [
    "package.json:version",
    "README.md:docker-cache@"
  ]
  major_version_zero = true

  [tool.poetry]
  name = "docker-cache"
  version = "0.3.3"
  description = "Cache Docker Images Whether Built or Pulled"
  authors = ["Kurt von Laven <kurt.von.laven@gmail.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  # Keep in sync with .pre-commit-config.yaml and .tool-versions.
  python = "==3.11.3"

  [tool.poetry.dev-dependencies]
  commitizen = "==3.2.0" # Keep in sync with .pre-commit-config.yaml.
  pre-commit = "==3.3.1"
