[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool]
  [tool.commitizen]
  version_provider = "poetry"
  version_files = [
    "package.json:version",
    "README.md:docker-cache@"
  ]
  major_version_zero = true

  [tool.poetry]
  package-mode = false
  name = "docker-cache"
  version = "0.5.0"
  description = "Cache Docker Images Whether Built or Pulled"
  authors = ["Kurt von Laven <kurt.von.laven@gmail.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  # Keep in sync with .pre-commit-config.yaml and .tool-versions.
  python = "==3.12.2"

  [tool.poetry.group.dev.dependencies]
  commitizen = "==3.18.4" # Keep in sync with .pre-commit-config.yaml.
  pre-commit = "==3.6.2"
